@@ -15,12 +15,14 @@
         <setting id="trailer.select" type="enum" label="Trailers" lvalues="32334|32119|32120" default="2" />
         <setting type="lsep" label="32319" />
         <setting id="movie.widget" type="enum" label="32320" lvalues="32302|32321|32322|32323|32324|32580" default="1" />
+        <setting id="channels" type="enum" label="32007" lvalues="32302|32301" default="0" />
         <setting id="lists.widget" type="enum" label="32329" lvalues="32302|32301" default="1" />
         <setting id="imdb.sort.order" type="enum" label="32567" lvalues="32568|32569" default="0" />
         <setting type="lsep" label="32002" />
         <setting id="flatten.tvshows" type="bool" label="32317" default="false" />
         <setting id="showunaired" type="bool" label="32570" default="true" />
         <setting id="tv.specials" type="bool" label="32613" default="true" />
+        <setting id="ep.ratings" type="bool" label="32128" default="false" />
         <setting id="tv.widget.alt" type="enum" label="32325" lvalues="32302|32326|32327|32328" default="2" visible="!eq(-16,)" />
         <setting id="tv.widget" type="enum" label="32325" lvalues="32302|32326" default="1" visible="eq(-17,)" />
         <setting id="prgr.sortorder" type="enum" label="32584" lvalues="32585|32586" default="1" visible="!eq(-18,)" />
@@ -50,7 +52,7 @@
         <setting id="torr.sort.size" type="bool" label="32113" default="true" />
         <setting id="check.torr.cache" type="bool" label="32114" default="true" />
         <setting id="remove.uncached" type="bool" label="32126" default="false" enable="eq(-1,true)" subsetting="true" />
-        <setting type="text" label="32115" enable="false" subsetting="true" />
+        <setting id="debrid.text" type="text" label="32115" enable="false" subsetting="true" />
         <setting id="torrent.min.seeders" type="slider" label="Minimum Seeders" visible="false" default="1" range="1,100" option="int" />
         <setting type="lsep" label="32343" />
         <setting id="bookmarks" type="bool" label="32344" default="true" />
@@ -69,13 +71,13 @@
         <setting type="sep" />
         <setting id="startup.sync.trakt.status" type="bool" label="32091" default="false" enable="!eq(-6,)"/>
         <setting id="trakt.scrobble" type="bool" label="32097" default="false" enable="!eq(-7,)"/>
-        <setting type="text" label="32098" enable="false" />
+        <setting id="scrobble.text" type="text" label="32098" enable="false" />
         <setting id="trakt.scrobble.notify" type="bool" label="32099" default="false" enable="!eq(-9,)+eq(-2,true)"/>
         <setting id="rersume.source" type="enum" label="32095" lvalues="32314|32096" default="0" enable="!eq(-10,)" />
         <setting type="lsep" label="32614" />
         <setting id="autoTraktOnStart" type="bool" label="32615" default="false" enable="!eq(-12,)"/>
         <setting id="schedTraktTime" type="slider" label="32616" default="0" range="0,24" option="int" enable="!eq(-13,)" />
-        <setting type="text" label="32617" enable="false" />
+        <setting id="sched.text" type="text" label="32617" enable="false" />
     </category>
 
     <category label="32345">
@@ -139,8 +141,8 @@
         <setting id="movie.download.path" type="folder" label="32349" enable="!eq(-2,false)" default="" />
         <setting id="tv.download.path" type="folder" label="32350" enable="!eq(-3,false)" default="" />
         <setting type="lsep" label="[CR]" />
-        <setting type="text" label="32351" enable="false" />
-        <setting type="text" label="32352" enable="false" />
+        <setting id="dl.text1" type="text" label="32351" enable="false" />
+        <setting id="dl.text2" type="text" label="32352" enable="false" />
     </category>
 
     <category label="32353">
@@ -150,8 +152,8 @@
         <setting id="subtitles.lang.2" type="select" label="32357" values="Afrikaans|Albanian|Arabic|Armenian|Basque|Bengali|Bosnian|Breton|Bulgarian|Burmese|Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Esperanto|Estonian|Finnish|French|Galician|Georgian|German|Greek|Hebrew|Hindi|Hungarian|Icelandic|Indonesian|Italian|Japanese|Kazakh|Khmer|Korean|Latvian|Lithuanian|Luxembourgish|Macedonian|Malay|Malayalam|Manipuri|Mongolian|Montenegrin|Norwegian|Occitan|Persian|Polish|Portuguese|Portuguese(Brazil)|Romanian|Russian|Serbian|Sinhalese|Slovak|Slovenian|Spanish|Swahili|Swedish|Syriac|Tagalog|Tamil|Telugu|Thai|Turkish|Ukrainian|Urdu" enable="!eq(-3,false)" default="English" />
         <setting type="sep" />
         <setting id="subtitles.utf" type="bool" label="32355" enable="!eq(-5,false)" default="false" />
-        <setting id="subtitles.notify" type="bool" label="32361" enable="!eq(-6,false)" default="true" />
-        <setting type="text" label="32118" enable="false" />
+        <setting id="subtitles.notify" type="bool" label="32361" enable="!eq(-6,false)" default="false" />
+        <setting id="subs.text" type="text" label="32118" enable="false" />
     </category>
 
     <category label="Debugging">
